# metadata-lock-collector

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  aggregate_locks.py  all_scenarios.py  collect_only.py  collect_only_local.py  config.py  database.py  lock_collector.py  lock_results  main.py  processlist  pyproject.toml  query_runner.py  utils.py
old/: aggregate_locks.py  all_scenarios.py  collect_only.py
