[tool.poetry]
name = "metadata-lock-counter"
version = "0.1.0"
description = ""
authors = ["Julia Jablonska <julia.jablonska@zestia.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mysql-connector-python = "^9.0.0"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
